--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -58,7 +58,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">English</a></li>
-            <li><a class="dropdown-item" href="#">Español</a></li>
+            <li><a class="dropdown-item" href="#">Hindi</a></li>
           </ul>
         </li>
       </ul>
